Fix button alignment on user registration form

--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -2189,13 +2189,14 @@ footer #colophon a:hover {
   color: white;
 }
 
-/* line 53, ../sass/components/_forms.scss */
+/* line 54, ../sass/components/_forms.scss */
+#user-register-form #edit-submit,
 #user-pass #edit-submit {
   padding: 0.8em 1em;
 }
 
 @media (min-width: 992px) {
-  /* line 60, ../sass/components/_forms.scss */
+  /* line 61, ../sass/components/_forms.scss */
   form[id^="redhen-campaign-page-add-form"],
   form[id^="redhen-campaign-campaign-form"],
   form[id^="redhen-campaign-campaign-page-form"] {
@@ -2206,7 +2207,7 @@ footer #colophon a:hover {
     width: 70%;
   }
 }
-/* line 65, ../sass/components/_forms.scss */
+/* line 66, ../sass/components/_forms.scss */
 form[id^="redhen-campaign-page-add-form"] .field-name-redhen-campaign-goal,
 form[id^="redhen-campaign-campaign-form"] .field-name-redhen-campaign-goal,
 form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal {
@@ -2214,7 +2215,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   font-size: 1em;
   padding-left: 0em;
 }
-/* line 69, ../sass/components/_forms.scss */
+/* line 70, ../sass/components/_forms.scss */
 form[id^="redhen-campaign-page-add-form"] .field-name-redhen-campaign-goal .field-prefix,
 form[id^="redhen-campaign-campaign-form"] .field-name-redhen-campaign-goal .field-prefix,
 form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal .field-prefix {
@@ -2222,7 +2223,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   font-size: 1.375em;
   line-height: 1.75em;
 }
-/* line 74, ../sass/components/_forms.scss */
+/* line 75, ../sass/components/_forms.scss */
 form[id^="redhen-campaign-page-add-form"] .field-name-redhen-campaign-goal input[id^="edit-redhen-campaign-goal-und-0-value"],
 form[id^="redhen-campaign-campaign-form"] .field-name-redhen-campaign-goal input[id^="edit-redhen-campaign-goal-und-0-value"],
 form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal input[id^="edit-redhen-campaign-goal-und-0-value"] {
@@ -2230,21 +2231,21 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   width: 97%;
 }
 @media (max-width: 480px) {
-  /* line 74, ../sass/components/_forms.scss */
+  /* line 75, ../sass/components/_forms.scss */
   form[id^="redhen-campaign-page-add-form"] .field-name-redhen-campaign-goal input[id^="edit-redhen-campaign-goal-und-0-value"],
   form[id^="redhen-campaign-campaign-form"] .field-name-redhen-campaign-goal input[id^="edit-redhen-campaign-goal-und-0-value"],
   form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal input[id^="edit-redhen-campaign-goal-und-0-value"] {
     width: 91%;
   }
 }
-/* line 82, ../sass/components/_forms.scss */
+/* line 83, ../sass/components/_forms.scss */
 form[id^="redhen-campaign-page-add-form"] .field-name-redhen-campaign-goal .description,
 form[id^="redhen-campaign-campaign-form"] .field-name-redhen-campaign-goal .description,
 form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal .description {
   clear: both;
 }
 
-/* line 92, ../sass/components/_forms.scss */
+/* line 93, ../sass/components/_forms.scss */
 #edit-field-start-date,
 #edit-field-end-date,
 .main-content-wrapper .field-name-field-end-date,
@@ -2255,7 +2256,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   margin-top: 0;
 }
 @media (max-width: 480px) {
-  /* line 92, ../sass/components/_forms.scss */
+  /* line 93, ../sass/components/_forms.scss */
   #edit-field-start-date,
   #edit-field-end-date,
   .main-content-wrapper .field-name-field-end-date,
@@ -2263,7 +2264,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
     clear: left;
     width: 100%;
   }
-  /* line 101, ../sass/components/_forms.scss */
+  /* line 102, ../sass/components/_forms.scss */
   #edit-field-start-date input[type=text],
   #edit-field-end-date input[type=text],
   .main-content-wrapper .field-name-field-end-date input[type=text],
@@ -2271,7 +2272,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
     width: 100%;
   }
 }
-/* line 104, ../sass/components/_forms.scss */
+/* line 105, ../sass/components/_forms.scss */
 #edit-field-start-date fieldset,
 #edit-field-end-date fieldset,
 .main-content-wrapper .field-name-field-end-date fieldset,
@@ -2280,7 +2281,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   padding: 0;
   margin: 0;
 }
-/* line 109, ../sass/components/_forms.scss */
+/* line 110, ../sass/components/_forms.scss */
 #edit-field-start-date .container-inline-date .date-padding,
 #edit-field-end-date .container-inline-date .date-padding,
 .main-content-wrapper .field-name-field-end-date .container-inline-date .date-padding,
@@ -2288,7 +2289,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   padding: 0;
   width: 100%;
 }
-/* line 113, ../sass/components/_forms.scss */
+/* line 114, ../sass/components/_forms.scss */
 #edit-field-start-date .container-inline-date .form-item,
 #edit-field-end-date .container-inline-date .form-item,
 .main-content-wrapper .field-name-field-end-date .container-inline-date .form-item,
@@ -2296,7 +2297,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   margin-bottom: 0;
 }
 @media (max-width: 480px) {
-  /* line 113, ../sass/components/_forms.scss */
+  /* line 114, ../sass/components/_forms.scss */
   #edit-field-start-date .container-inline-date .form-item,
   #edit-field-end-date .container-inline-date .form-item,
   .main-content-wrapper .field-name-field-end-date .container-inline-date .form-item,
@@ -2304,7 +2305,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
     width: 100%;
   }
 }
-/* line 119, ../sass/components/_forms.scss */
+/* line 120, ../sass/components/_forms.scss */
 #edit-field-start-date .form-item label,
 #edit-field-end-date .form-item label,
 .main-content-wrapper .field-name-field-end-date .form-item label,
@@ -2312,7 +2313,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   display: none;
 }
 
-/* line 125, ../sass/components/_forms.scss */
+/* line 126, ../sass/components/_forms.scss */
 .form-radio,
 .form-type-radio {
   background: none;
@@ -2344,12 +2345,12 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   border: 3px solid #90c965;
   color: white;
 }
-/* line 130, ../sass/components/_forms.scss */
+/* line 131, ../sass/components/_forms.scss */
 .form-radio input,
 .form-type-radio input {
   display: none;
 }
-/* line 133, ../sass/components/_forms.scss */
+/* line 134, ../sass/components/_forms.scss */
 .form-radio .ajax-progress-throbber,
 .form-type-radio .ajax-progress-throbber {
   position: absolute;
@@ -2358,12 +2359,12 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   left: 26%;
   font-size: 0.875em;
 }
-/* line 140, ../sass/components/_forms.scss */
+/* line 141, ../sass/components/_forms.scss */
 .form-radio label,
 .form-type-radio label {
   cursor: pointer;
 }
-/* line 143, ../sass/components/_forms.scss */
+/* line 144, ../sass/components/_forms.scss */
 .form-radio.checked,
 .form-type-radio.checked {
   background: #5e9733;
@@ -2371,7 +2372,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   color: white;
   cursor: default;
 }
-/* line 148, ../sass/components/_forms.scss */
+/* line 149, ../sass/components/_forms.scss */
 .form-radio.checked label,
 .form-type-radio.checked label {
   cursor: default;
