--- a/themes/raiser/sass/components/_forms.scss
+++ b/themes/raiser/sass/components/_forms.scss
@@ -49,6 +49,7 @@
   padding: 0.6em 1em;
 }
 
+#user-register-form,
 #user-pass {
   #edit-submit {
     padding: 0.8em 1em; 
